syntax = "proto3";

option csharp_namespace = "gRPCClient";

package greet;


service Notification {

  rpc SendMessage (MessageRequestDetails) returns (MessageReplyDetails);
}

message MessageRequestDetails {
	repeated MessageRequestObject MsgReqObjects = 1;
}

message MessageReplyDetails {
	repeated MessageReplyObject MsgRepObjects = 1;
}

// The request message containing the user's name.
message MessageRequestObject {
			string id = 1;
			string messageId = 2;
			string messageType = 3;
			string message = 4;
			string messagePub = 5;
			string messageExp = 6;
			string messageFromSourceSystem7 = 7;
			string messageFromSourceSystem8 = 8;
			string messageFromSourceSystem9 = 9;
			string messageFromSourceSystem10 = 10;
			string messageFromSourceSystem11 = 11;
			string messageFromSourceSystem12 = 12;
			string messageFromSourceSystem13 = 13;
			string messageFromSourceSystem14 = 14;
			string messageFromSourceSystem15 = 15;
			string messageFromSourceSystem16 = 16;
			string messageFromSourceSystem17 = 17;
			string messageFromSourceSystem18 = 18;
			string messageFromSourceSystem19 = 19;
			string messageFromSourceSystem20 = 20;
			string messageFromSourceSystem21 = 21;
			string messageFromSourceSystem22 = 22;
			string messageFromSourceSystem23 = 23;
			string messageFromSourceSystem24 = 24;
			string messageFromSourceSystem25 = 25;
			string messageFromSourceSystem26 = 26;
			string messageFromSourceSystem27 = 27;
			string messageFromSourceSystem28 = 28;
			string messageFromSourceSystem29 = 29;
			string messageFromSourceSystem30 = 30;
			string messageFromSourceSystem31 = 31;
			string messageFromSourceSystem32 = 32;
			string messageFromSourceSystem33 = 33;
			string messageFromSourceSystem34 = 34;
			string messageFromSourceSystem35 = 35;
			string messageFromSourceSystem36 = 36;
			string messageFromSourceSystem37 = 37;
			string messageFromSourceSystem38 = 38;
			string messageFromSourceSystem39 = 39;
			string messageFromSourceSystem40 = 40;
			string messageFromSourceSystem41 = 41;
			string messageFromSourceSystem42 = 42;
			string messageFromSourceSystem43 = 43;
			string messageFromSourceSystem44 = 44;
			string messageFromSourceSystem45 = 45;
			string messageFromSourceSystem46 = 46;
			string messageFromSourceSystem47 = 47;
			string messageFromSourceSystem48 = 48;
			string messageFromSourceSystem49 = 49;
			string messageFromSourceSystem50 = 50;
			string messageFromSourceSystem51 = 51;
			string messageFromSourceSystem52 = 52;
			string messageFromSourceSystem53 = 53;
			string messageFromSourceSystem54 = 54;
			string messageFromSourceSystem55 = 55;
			string messageFromSourceSystem56 = 56;
			string messageFromSourceSystem57 = 57;
			string messageFromSourceSystem58 = 58;
			string messageFromSourceSystem59 = 59;
			string messageFromSourceSystem60 = 60;
			string messageFromSourceSystem61 = 61;
			string messageFromSourceSystem62 = 62;
			string messageFromSourceSystem63 = 63;
			string messageFromSourceSystem64 = 64;
			string messageFromSourceSystem65 = 65;
			string messageFromSourceSystem66 = 66;
			string messageFromSourceSystem67 = 67;
			string messageFromSourceSystem68 = 68;
			string messageFromSourceSystem69 = 69;
			string messageFromSourceSystem70 = 70;
			string messageFromSourceSystem71 = 71;
			string messageFromSourceSystem72 = 72;
			string messageFromSourceSystem73 = 73;
			string messageFromSourceSystem74 = 74;
			string messageFromSourceSystem75 = 75;
			string messageFromSourceSystem76 = 76;
			string messageFromSourceSystem77 = 77;
			string messageFromSourceSystem78 = 78;
			string messageFromSourceSystem79 = 79;
			string messageFromSourceSystem80 = 80;
			string messageFromSourceSystem81 = 81;
			string messageFromSourceSystem82 = 82;
			string messageFromSourceSystem83 = 83;
			string messageFromSourceSystem84 = 84;
			string messageFromSourceSystem85 = 85;
			string messageFromSourceSystem86 = 86;
			string messageFromSourceSystem87 = 87;
			string messageFromSourceSystem88 = 88;
			string messageFromSourceSystem89 = 89;
			string messageFromSourceSystem90 = 90;
			string messageFromSourceSystem91 = 91;
			string messageFromSourceSystem92 = 92;
			string messageFromSourceSystem93 = 93;
			string messageFromSourceSystem94 = 94;
			string messageFromSourceSystem95 = 95;
			string messageFromSourceSystem96 = 96;
			string messageFromSourceSystem97 = 97;
			string messageFromSourceSystem98 = 98;
			string messageFromSourceSystem99 = 99;
			string messageFromSourceSystem100 = 100;
			string messageFromSourceSystem101 = 101;
			string messageFromSourceSystem102 = 102;
			string messageFromSourceSystem103 = 103;
			string messageFromSourceSystem104 = 104;
			string messageFromSourceSystem105 = 105;
			string messageFromSourceSystem106 = 106;
			string messageFromSourceSystem107 = 107;
			string messageFromSourceSystem108 = 108;
			string messageFromSourceSystem109 = 109;
			string messageFromSourceSystem110 = 110;
			string messageFromSourceSystem111 = 111;
			string messageFromSourceSystem112 = 112;
			string messageFromSourceSystem113 = 113;
			string messageFromSourceSystem114 = 114;
			string messageFromSourceSystem115 = 115;
			string messageFromSourceSystem116 = 116;
			string messageFromSourceSystem117 = 117;
			string messageFromSourceSystem118 = 118;
			string messageFromSourceSystem119 = 119;
			string messageFromSourceSystem120 = 120;
			string messageFromSourceSystem121 = 121;
			string messageFromSourceSystem122 = 122;
			string messageFromSourceSystem123 = 123;
			string messageFromSourceSystem124 = 124;
			string messageFromSourceSystem125 = 125;
			string messageFromSourceSystem126 = 126;
			string messageFromSourceSystem127 = 127;
			string messageFromSourceSystem128 = 128;
			string messageFromSourceSystem129 = 129;
			string messageFromSourceSystem130 = 130;
			string messageFromSourceSystem131 = 131;
			string messageFromSourceSystem132 = 132;
			string messageFromSourceSystem133 = 133;
			string messageFromSourceSystem134 = 134;
			string messageFromSourceSystem135 = 135;
			string messageFromSourceSystem136 = 136;
			string messageFromSourceSystem137 = 137;
			string messageFromSourceSystem138 = 138;
			string messageFromSourceSystem139 = 139;
			string messageFromSourceSystem140 = 140;
			string messageFromSourceSystem141 = 141;
			string messageFromSourceSystem142 = 142;
			string messageFromSourceSystem143 = 143;
			string messageFromSourceSystem144 = 144;
			string messageFromSourceSystem145 = 145;
			string messageFromSourceSystem146 = 146;
			string messageFromSourceSystem147 = 147;
			string messageFromSourceSystem148 = 148;
			string messageFromSourceSystem149 = 149;
			string messageFromSourceSystem150 = 150;
			string messageFromSourceSystem151 = 151;
			string messageFromSourceSystem152 = 152;
			string messageFromSourceSystem153 = 153;
			string messageFromSourceSystem154 = 154;
			string messageFromSourceSystem155 = 155;
			string messageFromSourceSystem156 = 156;
			string messageFromSourceSystem157 = 157;
			string messageFromSourceSystem158 = 158;
			string messageFromSourceSystem159 = 159;
			string messageFromSourceSystem160 = 160;
			string messageFromSourceSystem161 = 161;
			string messageFromSourceSystem162 = 162;
			string messageFromSourceSystem163 = 163;
			string messageFromSourceSystem164 = 164;
			string messageFromSourceSystem165 = 165;
			string messageFromSourceSystem166 = 166;
			string messageFromSourceSystem167 = 167;
			string messageFromSourceSystem168 = 168;
			string messageFromSourceSystem169 = 169;
			string messageFromSourceSystem170 = 170;
			string messageFromSourceSystem171 = 171;
			string messageFromSourceSystem172 = 172;
			string messageFromSourceSystem173 = 173;
			string messageFromSourceSystem174 = 174;
			string messageFromSourceSystem175 = 175;
			string messageFromSourceSystem176 = 176;
			string messageFromSourceSystem177 = 177;
			string messageFromSourceSystem178 = 178;
			string messageFromSourceSystem179 = 179;
			string messageFromSourceSystem180 = 180;
			string messageFromSourceSystem181 = 181;
			string messageFromSourceSystem182 = 182;
			string messageFromSourceSystem183 = 183;
			string messageFromSourceSystem184 = 184;
			string messageFromSourceSystem185 = 185;
			string messageFromSourceSystem186 = 186;
			string messageFromSourceSystem187 = 187;
			string messageFromSourceSystem188 = 188;
			string messageFromSourceSystem189 = 189;
			string messageFromSourceSystem190 = 190;
			string messageFromSourceSystem191 = 191;
			string messageFromSourceSystem192 = 192;
			string messageFromSourceSystem193 = 193;
			string messageFromSourceSystem194 = 194;
			string messageFromSourceSystem195 = 195;
			string messageFromSourceSystem196 = 196;
			string messageFromSourceSystem197 = 197;
			string messageFromSourceSystem198 = 198;
			string messageFromSourceSystem199 = 199;
			string messageFromSourceSystem200 = 200;
			string messageFromSourceSystem201 = 201;
			string messageFromSourceSystem202 = 202;
			string messageFromSourceSystem203 = 203;
			string messageFromSourceSystem204 = 204;
			string messageFromSourceSystem205 = 205;
			string messageFromSourceSystem206 = 206;
			string messageFromSourceSystem207 = 207;
			string messageFromSourceSystem208 = 208;
			string messageFromSourceSystem209 = 209;
			string messageFromSourceSystem210 = 210;
			string messageFromSourceSystem211 = 211;
			string messageFromSourceSystem212 = 212;
			string messageFromSourceSystem213 = 213;
			string messageFromSourceSystem214 = 214;
			string messageFromSourceSystem215 = 215;
			string messageFromSourceSystem216 = 216;
			string messageFromSourceSystem217 = 217;
			string messageFromSourceSystem218 = 218;
			string messageFromSourceSystem219 = 219;
			string messageFromSourceSystem220 = 220;
			string messageFromSourceSystem221 = 221;
			string messageFromSourceSystem222 = 222;
			string messageFromSourceSystem223 = 223;
			string messageFromSourceSystem224 = 224;
			string messageFromSourceSystem225 = 225;
			string messageFromSourceSystem226 = 226;
			string messageFromSourceSystem227 = 227;
			string messageFromSourceSystem228 = 228;
			string messageFromSourceSystem229 = 229;
			string messageFromSourceSystem230 = 230;
			string messageFromSourceSystem231 = 231;
			string messageFromSourceSystem232 = 232;
			string messageFromSourceSystem233 = 233;
			string messageFromSourceSystem234 = 234;
			string messageFromSourceSystem235 = 235;
			string messageFromSourceSystem236 = 236;
			string messageFromSourceSystem237 = 237;
			string messageFromSourceSystem238 = 238;
			string messageFromSourceSystem239 = 239;
			string messageFromSourceSystem240 = 240;
			string messageFromSourceSystem241 = 241;
			string messageFromSourceSystem242 = 242;
			string messageFromSourceSystem243 = 243;
			string messageFromSourceSystem244 = 244;
			string messageFromSourceSystem245 = 245;
			string messageFromSourceSystem246 = 246;
			string messageFromSourceSystem247 = 247;
			string messageFromSourceSystem248 = 248;
			string messageFromSourceSystem249 = 249;
			string messageFromSourceSystem250 = 250;
			string messageFromSourceSystem251 = 251;
			string messageFromSourceSystem252 = 252;
			string messageFromSourceSystem253 = 253;
			string messageFromSourceSystem254 = 254;
			string messageFromSourceSystem255 = 255;
			string messageFromSourceSystem256 = 256;
			string messageFromSourceSystem257 = 257;
			string messageFromSourceSystem258 = 258;
			string messageFromSourceSystem259 = 259;
			string messageFromSourceSystem260 = 260;
			string messageFromSourceSystem261 = 261;
			string messageFromSourceSystem262 = 262;
			string messageFromSourceSystem263 = 263;
			string messageFromSourceSystem264 = 264;
			string messageFromSourceSystem265 = 265;
			string messageFromSourceSystem266 = 266;
			string messageFromSourceSystem267 = 267;
			string messageFromSourceSystem268 = 268;
			string messageFromSourceSystem269 = 269;
			string messageFromSourceSystem270 = 270;
			string messageFromSourceSystem271 = 271;
			string messageFromSourceSystem272 = 272;
			string messageFromSourceSystem273 = 273;
			string messageFromSourceSystem274 = 274;
			string messageFromSourceSystem275 = 275;
			string messageFromSourceSystem276 = 276;
			string messageFromSourceSystem277 = 277;
			string messageFromSourceSystem278 = 278;
			string messageFromSourceSystem279 = 279;
			string messageFromSourceSystem280 = 280;
			string messageFromSourceSystem281 = 281;
			string messageFromSourceSystem282 = 282;
			string messageFromSourceSystem283 = 283;
			string messageFromSourceSystem284 = 284;
			string messageFromSourceSystem285 = 285;
			string messageFromSourceSystem286 = 286;
			string messageFromSourceSystem287 = 287;
			string messageFromSourceSystem288 = 288;
			string messageFromSourceSystem289 = 289;
			string messageFromSourceSystem290 = 290;
			string messageFromSourceSystem291 = 291;
			string messageFromSourceSystem292 = 292;
			string messageFromSourceSystem293 = 293;
			string messageFromSourceSystem294 = 294;
			string messageFromSourceSystem295 = 295;
			string messageFromSourceSystem296 = 296;
			string messageFromSourceSystem297 = 297;
			string messageFromSourceSystem298 = 298;
			string messageFromSourceSystem299 = 299;
			string messageFromSourceSystem300 = 300;
			string messageFromSourceSystem301 = 301;
			string messageFromSourceSystem302 = 302;
			string messageFromSourceSystem303 = 303;
			string messageFromSourceSystem304 = 304;
			string messageFromSourceSystem305 = 305;
			string messageFromSourceSystem306 = 306;
}

// The response message containing the greetings.
message MessageReplyObject {
		  string id = 1;
		  string messageId = 2;
		  string messageType = 3;
		  string message = 4;
		  string messagePub = 5;
		  string messageExp = 6;
			string messageFromSourceSystem7 = 7;
			string messageFromSourceSystem8 = 8;
			string messageFromSourceSystem9 = 9;
			string messageFromSourceSystem10 = 10;
			string messageFromSourceSystem11 = 11;
			string messageFromSourceSystem12 = 12;
			string messageFromSourceSystem13 = 13;
			string messageFromSourceSystem14 = 14;
			string messageFromSourceSystem15 = 15;
			string messageFromSourceSystem16 = 16;
			string messageFromSourceSystem17 = 17;
			string messageFromSourceSystem18 = 18;
			string messageFromSourceSystem19 = 19;
			string messageFromSourceSystem20 = 20;
			string messageFromSourceSystem21 = 21;
			string messageFromSourceSystem22 = 22;
			string messageFromSourceSystem23 = 23;
			string messageFromSourceSystem24 = 24;
			string messageFromSourceSystem25 = 25;
			string messageFromSourceSystem26 = 26;
			string messageFromSourceSystem27 = 27;
			string messageFromSourceSystem28 = 28;
			string messageFromSourceSystem29 = 29;
			string messageFromSourceSystem30 = 30;
			string messageFromSourceSystem31 = 31;
			string messageFromSourceSystem32 = 32;
			string messageFromSourceSystem33 = 33;
			string messageFromSourceSystem34 = 34;
			string messageFromSourceSystem35 = 35;
			string messageFromSourceSystem36 = 36;
			string messageFromSourceSystem37 = 37;
			string messageFromSourceSystem38 = 38;
			string messageFromSourceSystem39 = 39;
			string messageFromSourceSystem40 = 40;
			string messageFromSourceSystem41 = 41;
			string messageFromSourceSystem42 = 42;
			string messageFromSourceSystem43 = 43;
			string messageFromSourceSystem44 = 44;
			string messageFromSourceSystem45 = 45;
			string messageFromSourceSystem46 = 46;
			string messageFromSourceSystem47 = 47;
			string messageFromSourceSystem48 = 48;
			string messageFromSourceSystem49 = 49;
			string messageFromSourceSystem50 = 50;
			string messageFromSourceSystem51 = 51;
			string messageFromSourceSystem52 = 52;
			string messageFromSourceSystem53 = 53;
			string messageFromSourceSystem54 = 54;
			string messageFromSourceSystem55 = 55;
			string messageFromSourceSystem56 = 56;
			string messageFromSourceSystem57 = 57;
			string messageFromSourceSystem58 = 58;
			string messageFromSourceSystem59 = 59;
			string messageFromSourceSystem60 = 60;
			string messageFromSourceSystem61 = 61;
			string messageFromSourceSystem62 = 62;
			string messageFromSourceSystem63 = 63;
			string messageFromSourceSystem64 = 64;
			string messageFromSourceSystem65 = 65;
			string messageFromSourceSystem66 = 66;
			string messageFromSourceSystem67 = 67;
			string messageFromSourceSystem68 = 68;
			string messageFromSourceSystem69 = 69;
			string messageFromSourceSystem70 = 70;
			string messageFromSourceSystem71 = 71;
			string messageFromSourceSystem72 = 72;
			string messageFromSourceSystem73 = 73;
			string messageFromSourceSystem74 = 74;
			string messageFromSourceSystem75 = 75;
			string messageFromSourceSystem76 = 76;
			string messageFromSourceSystem77 = 77;
			string messageFromSourceSystem78 = 78;
			string messageFromSourceSystem79 = 79;
			string messageFromSourceSystem80 = 80;
			string messageFromSourceSystem81 = 81;
			string messageFromSourceSystem82 = 82;
			string messageFromSourceSystem83 = 83;
			string messageFromSourceSystem84 = 84;
			string messageFromSourceSystem85 = 85;
			string messageFromSourceSystem86 = 86;
			string messageFromSourceSystem87 = 87;
			string messageFromSourceSystem88 = 88;
			string messageFromSourceSystem89 = 89;
			string messageFromSourceSystem90 = 90;
			string messageFromSourceSystem91 = 91;
			string messageFromSourceSystem92 = 92;
			string messageFromSourceSystem93 = 93;
			string messageFromSourceSystem94 = 94;
			string messageFromSourceSystem95 = 95;
			string messageFromSourceSystem96 = 96;
			string messageFromSourceSystem97 = 97;
			string messageFromSourceSystem98 = 98;
			string messageFromSourceSystem99 = 99;
			string messageFromSourceSystem100 = 100;
			string messageFromSourceSystem101 = 101;
			string messageFromSourceSystem102 = 102;
			string messageFromSourceSystem103 = 103;
			string messageFromSourceSystem104 = 104;
			string messageFromSourceSystem105 = 105;
			string messageFromSourceSystem106 = 106;
			string messageFromSourceSystem107 = 107;
			string messageFromSourceSystem108 = 108;
			string messageFromSourceSystem109 = 109;
			string messageFromSourceSystem110 = 110;
			string messageFromSourceSystem111 = 111;
			string messageFromSourceSystem112 = 112;
			string messageFromSourceSystem113 = 113;
			string messageFromSourceSystem114 = 114;
			string messageFromSourceSystem115 = 115;
			string messageFromSourceSystem116 = 116;
			string messageFromSourceSystem117 = 117;
			string messageFromSourceSystem118 = 118;
			string messageFromSourceSystem119 = 119;
			string messageFromSourceSystem120 = 120;
			string messageFromSourceSystem121 = 121;
			string messageFromSourceSystem122 = 122;
			string messageFromSourceSystem123 = 123;
			string messageFromSourceSystem124 = 124;
			string messageFromSourceSystem125 = 125;
			string messageFromSourceSystem126 = 126;
			string messageFromSourceSystem127 = 127;
			string messageFromSourceSystem128 = 128;
			string messageFromSourceSystem129 = 129;
			string messageFromSourceSystem130 = 130;
			string messageFromSourceSystem131 = 131;
			string messageFromSourceSystem132 = 132;
			string messageFromSourceSystem133 = 133;
			string messageFromSourceSystem134 = 134;
			string messageFromSourceSystem135 = 135;
			string messageFromSourceSystem136 = 136;
			string messageFromSourceSystem137 = 137;
			string messageFromSourceSystem138 = 138;
			string messageFromSourceSystem139 = 139;
			string messageFromSourceSystem140 = 140;
			string messageFromSourceSystem141 = 141;
			string messageFromSourceSystem142 = 142;
			string messageFromSourceSystem143 = 143;
			string messageFromSourceSystem144 = 144;
			string messageFromSourceSystem145 = 145;
			string messageFromSourceSystem146 = 146;
			string messageFromSourceSystem147 = 147;
			string messageFromSourceSystem148 = 148;
			string messageFromSourceSystem149 = 149;
			string messageFromSourceSystem150 = 150;
			string messageFromSourceSystem151 = 151;
			string messageFromSourceSystem152 = 152;
			string messageFromSourceSystem153 = 153;
			string messageFromSourceSystem154 = 154;
			string messageFromSourceSystem155 = 155;
			string messageFromSourceSystem156 = 156;
			string messageFromSourceSystem157 = 157;
			string messageFromSourceSystem158 = 158;
			string messageFromSourceSystem159 = 159;
			string messageFromSourceSystem160 = 160;
			string messageFromSourceSystem161 = 161;
			string messageFromSourceSystem162 = 162;
			string messageFromSourceSystem163 = 163;
			string messageFromSourceSystem164 = 164;
			string messageFromSourceSystem165 = 165;
			string messageFromSourceSystem166 = 166;
			string messageFromSourceSystem167 = 167;
			string messageFromSourceSystem168 = 168;
			string messageFromSourceSystem169 = 169;
			string messageFromSourceSystem170 = 170;
			string messageFromSourceSystem171 = 171;
			string messageFromSourceSystem172 = 172;
			string messageFromSourceSystem173 = 173;
			string messageFromSourceSystem174 = 174;
			string messageFromSourceSystem175 = 175;
			string messageFromSourceSystem176 = 176;
			string messageFromSourceSystem177 = 177;
			string messageFromSourceSystem178 = 178;
			string messageFromSourceSystem179 = 179;
			string messageFromSourceSystem180 = 180;
			string messageFromSourceSystem181 = 181;
			string messageFromSourceSystem182 = 182;
			string messageFromSourceSystem183 = 183;
			string messageFromSourceSystem184 = 184;
			string messageFromSourceSystem185 = 185;
			string messageFromSourceSystem186 = 186;
			string messageFromSourceSystem187 = 187;
			string messageFromSourceSystem188 = 188;
			string messageFromSourceSystem189 = 189;
			string messageFromSourceSystem190 = 190;
			string messageFromSourceSystem191 = 191;
			string messageFromSourceSystem192 = 192;
			string messageFromSourceSystem193 = 193;
			string messageFromSourceSystem194 = 194;
			string messageFromSourceSystem195 = 195;
			string messageFromSourceSystem196 = 196;
			string messageFromSourceSystem197 = 197;
			string messageFromSourceSystem198 = 198;
			string messageFromSourceSystem199 = 199;
			string messageFromSourceSystem200 = 200;
			string messageFromSourceSystem201 = 201;
			string messageFromSourceSystem202 = 202;
			string messageFromSourceSystem203 = 203;
			string messageFromSourceSystem204 = 204;
			string messageFromSourceSystem205 = 205;
			string messageFromSourceSystem206 = 206;
			string messageFromSourceSystem207 = 207;
			string messageFromSourceSystem208 = 208;
			string messageFromSourceSystem209 = 209;
			string messageFromSourceSystem210 = 210;
			string messageFromSourceSystem211 = 211;
			string messageFromSourceSystem212 = 212;
			string messageFromSourceSystem213 = 213;
			string messageFromSourceSystem214 = 214;
			string messageFromSourceSystem215 = 215;
			string messageFromSourceSystem216 = 216;
			string messageFromSourceSystem217 = 217;
			string messageFromSourceSystem218 = 218;
			string messageFromSourceSystem219 = 219;
			string messageFromSourceSystem220 = 220;
			string messageFromSourceSystem221 = 221;
			string messageFromSourceSystem222 = 222;
			string messageFromSourceSystem223 = 223;
			string messageFromSourceSystem224 = 224;
			string messageFromSourceSystem225 = 225;
			string messageFromSourceSystem226 = 226;
			string messageFromSourceSystem227 = 227;
			string messageFromSourceSystem228 = 228;
			string messageFromSourceSystem229 = 229;
			string messageFromSourceSystem230 = 230;
			string messageFromSourceSystem231 = 231;
			string messageFromSourceSystem232 = 232;
			string messageFromSourceSystem233 = 233;
			string messageFromSourceSystem234 = 234;
			string messageFromSourceSystem235 = 235;
			string messageFromSourceSystem236 = 236;
			string messageFromSourceSystem237 = 237;
			string messageFromSourceSystem238 = 238;
			string messageFromSourceSystem239 = 239;
			string messageFromSourceSystem240 = 240;
			string messageFromSourceSystem241 = 241;
			string messageFromSourceSystem242 = 242;
			string messageFromSourceSystem243 = 243;
			string messageFromSourceSystem244 = 244;
			string messageFromSourceSystem245 = 245;
			string messageFromSourceSystem246 = 246;
			string messageFromSourceSystem247 = 247;
			string messageFromSourceSystem248 = 248;
			string messageFromSourceSystem249 = 249;
			string messageFromSourceSystem250 = 250;
			string messageFromSourceSystem251 = 251;
			string messageFromSourceSystem252 = 252;
			string messageFromSourceSystem253 = 253;
			string messageFromSourceSystem254 = 254;
			string messageFromSourceSystem255 = 255;
			string messageFromSourceSystem256 = 256;
			string messageFromSourceSystem257 = 257;
			string messageFromSourceSystem258 = 258;
			string messageFromSourceSystem259 = 259;
			string messageFromSourceSystem260 = 260;
			string messageFromSourceSystem261 = 261;
			string messageFromSourceSystem262 = 262;
			string messageFromSourceSystem263 = 263;
			string messageFromSourceSystem264 = 264;
			string messageFromSourceSystem265 = 265;
			string messageFromSourceSystem266 = 266;
			string messageFromSourceSystem267 = 267;
			string messageFromSourceSystem268 = 268;
			string messageFromSourceSystem269 = 269;
			string messageFromSourceSystem270 = 270;
			string messageFromSourceSystem271 = 271;
			string messageFromSourceSystem272 = 272;
			string messageFromSourceSystem273 = 273;
			string messageFromSourceSystem274 = 274;
			string messageFromSourceSystem275 = 275;
			string messageFromSourceSystem276 = 276;
			string messageFromSourceSystem277 = 277;
			string messageFromSourceSystem278 = 278;
			string messageFromSourceSystem279 = 279;
			string messageFromSourceSystem280 = 280;
			string messageFromSourceSystem281 = 281;
			string messageFromSourceSystem282 = 282;
			string messageFromSourceSystem283 = 283;
			string messageFromSourceSystem284 = 284;
			string messageFromSourceSystem285 = 285;
			string messageFromSourceSystem286 = 286;
			string messageFromSourceSystem287 = 287;
			string messageFromSourceSystem288 = 288;
			string messageFromSourceSystem289 = 289;
			string messageFromSourceSystem290 = 290;
			string messageFromSourceSystem291 = 291;
			string messageFromSourceSystem292 = 292;
			string messageFromSourceSystem293 = 293;
			string messageFromSourceSystem294 = 294;
			string messageFromSourceSystem295 = 295;
			string messageFromSourceSystem296 = 296;
			string messageFromSourceSystem297 = 297;
			string messageFromSourceSystem298 = 298;
			string messageFromSourceSystem299 = 299;
			string messageFromSourceSystem300 = 300;
			string messageFromSourceSystem301 = 301;
			string messageFromSourceSystem302 = 302;
			string messageFromSourceSystem303 = 303;
			string messageFromSourceSystem304 = 304;
			string messageFromSourceSystem305 = 305;
			string messageFromSourceSystem306 = 306;
}
